@@ -104,6 +104,8 @@ module ActiveMerchant #:nodoc:
       TEST_LOGIN = 'TestMerchant'
       TEST_PASSWORD = 'password'
 
+      VOIDABLE_ACTIONS = %w(preauth sale postauth credit)
+
       self.money_format = :cents
       self.supported_cardtypes = [:visa, :master, :discover, :american_express, :diners_club, :jcb]
       self.supported_countries = ['US']
@@ -179,9 +181,10 @@ module ActiveMerchant #:nodoc:
       # postauth, we preserve active_merchant's nomenclature of capture() for consistency with the rest of the library. To process
       # a postauthorization with TC, you need an amount in cents or a money object, and a TC transid.
       def capture(money, authorization, options = {})
+        transaction_id, _ = split_authorization(authorization)
         parameters = {
           :amount => amount(money),
-          :transid => authorization,
+          :transid => transaction_id,
         }
         add_aggregator(parameters, options)
 
@@ -191,9 +194,10 @@ module ActiveMerchant #:nodoc:
       # refund() allows you to return money to a card that was previously billed. You need to supply the amount, in cents or a money object,
       # that you want to refund, and a TC transid for the transaction that you are refunding.
       def refund(money, identification, options = {})
+        transaction_id, _ = split_authorization(identification)
         parameters = {
           :amount => amount(money),
-          :transid => identification
+          :transid => transaction_id
         }
         add_aggregator(parameters, options)
 
@@ -214,18 +218,24 @@ module ActiveMerchant #:nodoc:
       # TrustCommerce to allow for reversal transactions before you can use this
       # method.
       #
+      # void() is also used to to cancel a capture (postauth), purchase (sale),
+      # or refund (credit) or a before it is sent for settlement.
+      #
       # NOTE: AMEX preauth's cannot be reversed. If you want to clear it more
       # quickly than the automatic expiration (7-10 days), you will have to
       # capture it and then immediately issue a credit for the same amount
       # which should clear the customers credit card with 48 hours according to
       # TC.
       def void(authorization, options = {})
+        transaction_id, original_action = split_authorization(authorization)
+        action = (VOIDABLE_ACTIONS - ['preauth']).include?(original_action) ? 'void' : 'reversal'
+
         parameters = {
-          :transid => authorization,
+          :transid => transaction_id,
         }
         add_aggregator(parameters, options)
 
-        commit('reversal', parameters)
+        commit(action, parameters)
       end
 
       # recurring() a TrustCommerce account that is activated for Citadel, TrustCommerce's
@@ -416,7 +426,7 @@ module ActiveMerchant #:nodoc:
         message = message_from(data)
         Response.new(success, message, data,
           :test => test?,
-          :authorization => data['transid'],
+          :authorization => authorization_from(action, data),
           :cvv_result => data['cvv'],
           :avs_result => { :code => data['avs'] }
         )
@@ -446,6 +456,15 @@ module ActiveMerchant #:nodoc:
         end
       end
 
+      def authorization_from(action, data)
+        authorization = data['transid']
+        authorization = "#{authorization}|#{action}" if authorization && VOIDABLE_ACTIONS.include?(action)
+        authorization
+      end
+
+      def split_authorization(authorization)
+        authorization.split('|')
+      end
     end
   end
 end
