@@ -21,7 +21,7 @@ class TrustCommerceTest < Test::Unit::TestCase
     assert response = @gateway.purchase(@amount, @credit_card)
     assert_instance_of Response, response
     assert_success response
-    assert_equal '025-0007423614', response.authorization
+    assert_equal '025-0007423614|sale', response.authorization
   end
 
   def test_unsuccessful_purchase
@@ -39,6 +39,22 @@ class TrustCommerceTest < Test::Unit::TestCase
       assert_match(%r{aggregator1}, data)
       assert_match(%r{name=Jim\+Smith}, data)
     end.respond_with(successful_purchase_response)
+  end
+
+  def test_successful_void_from_purchase
+    stub_comms do
+      @gateway.void('1235|sale')
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{action=void}, data)
+    end.respond_with(successful_void_response)
+  end
+
+  def test_successful_void_from_authorize
+    stub_comms do
+      @gateway.void('1235|preauth')
+    end.check_request do |endpoint, data, headers|
+      assert_match(%r{action=reversal}, data)
+    end.respond_with(successful_void_response)
   end
 
   def test_amount_style
@@ -102,6 +118,13 @@ transid=025-0007423827
 declinetype=cvv
 status=decline
 cvv=N
+    RESPONSE
+  end
+
+  def successful_void_response
+    <<-RESPONSE
+transid=025-0007423828
+status=accpeted
     RESPONSE
   end
 
